--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MapleClub</title>
+
+    <script async src="https://arc.io/widget.min.js#BHBrBkL3"></script>
+
 </head>
 <body>
     <h1>Welcome to MapleClub.Top</h1>
