--- a/views/downloads.ejs
+++ b/views/downloads.ejs
@@ -36,7 +36,10 @@
 
 </head>
 <body onload="bodyLoad()">
-    <a href="/downloads/coco-pewdiepie">Coco - PewDiePie</a>
+
+    <a href="/assets/cocoPewDiePie.mp4">cocoPewDiePie.mp4</a>
+    <a href="/assets/mapleClubCircle.png">mapleClubCircle.png</a>
+    <a href="/assets/starsBackground.png">starsBackground.png</a>
 
 </body>
 </html>
