--- a/views/downloads.ejs
+++ b/views/downloads.ejs
@@ -37,7 +37,7 @@
 </head>
 <body onload="bodyLoad()">
 
-    <a href="/assets/cocoPewDiePie.mp4">cocoPewDiePie.mp4</a>
+    <a href="/assets/cocoPewdiepie.mp4">cocoPewDiePie.mp4</a>
     <a href="/assets/mapleClubCircle.png">mapleClubCircle.png</a>
     <a href="/assets/starsBackground.png">starsBackground.png</a>
 
