--- a/views/downloads.ejs
+++ b/views/downloads.ejs
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Link Preview Meta Tags -->
-    <!-- PLACE HOLDER -->
-    <!-- PLACE HOLDER -->
-    <!-- PLACE HOLDER -->
-    <!-- PLACE HOLDER -->
-    <!-- PLACE HOLDER -->
-    <!-- PLACE HOLDER -->
-    <!-- PLACE HOLDER -->
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MapleClub | Downloads">
+    <meta property="og:description" content="Welcome to MapleClub">
+    <meta property="og:url" content="https://mapleclub.top">
+    <meta property="og:site_name" content="MapleClub">
+    <meta property="og:image" content="https://mapleclub.top/assets/mapleClub.jpg">
 
-    <title>Downloads | MapleClub</title>
+    <title>MapleClub | Downloads</title>
 
     <!-- Arc.io Widget Script -->
     <script async src="https://arc.io/widget.min.js#BHBrBkL3"></script>
@@ -36,10 +36,12 @@
 
 </head>
 <body onload="bodyLoad()">
+    <div class="main_body">
 
-    <a href="/assets/cocoPewdiepie.mp4">cocoPewDiePie.mp4</a>
-    <a href="/assets/mapleClubCircle.png">mapleClubCircle.png</a>
-    <a href="/assets/starsBackground.png">starsBackground.png</a>
-
+        <a href="/assets/cocoPewdiepie.mp4">cocoPewdiepie.mp4</a>
+        <a href="/assets/mapleClubCircle.png">mapleClubCircle.png</a>
+        <a href="/assets/starsBackground.png">starsBackground.png</a>
+    
+    </div>
 </body>
 </html>
