--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,12 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MapleClub</title>
 
+    <!-- Link Preview Meta Tags -->
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MapleClub | Home">
+    <meta property="og:description" content="Welcome to MapleClub">
+    <meta property="og:url" content="https://mapleclub.top">
+    <meta property="og:site_name" content="MapleClub">
+    <meta property="og:image" content="https://mapleclub.top/assets/mapleClub.jpg">
+
+    <title>MapleClub | Home</title>
+
+    <!-- Arc.io Widget Script -->
     <script async src="https://arc.io/widget.min.js#BHBrBkL3"></script>
 
+    <!-- Local Files -->
+    <link rel="icon" href="/assets/mapleClubCircle.png" type="image/png">
+    <link rel="stylesheet" href="/styles/home.css" type="text/css">
+    <script src="/javascripts/home.js"></script>
+
+    <!-- Bootstrap 4 MaxCDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
-<body>
-    <h1>Welcome to MapleClub.Top</h1>
+<body onload="bodyLoad()">
+    <div class="main_body">
+
+        <!-- Navbar Section -->
+        <div class="navbar_section container">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand text-white" href="/">
+                    <img height="30px" width="30px" src="/assets/mapleClub.jpg">
+                    Maple<span>Club</span>
+                </a>
+                <button class="navbar-toggler" style="border: none;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="text-white fa fa-bars"></i>
+                </button>
+                
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" id="active-tab" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/downloads">Downloads</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    
+        <!-- Hero Section -->
+        <div class="hero_section container">
+        
+        </div>
+
+    </div>
 </body>
 </html>
