updated home page

--- a/views/styles/home.css
+++ b/views/styles/home.css
@@ -7,45 +7,69 @@
     --text-grey: #63707f;
     --button-green: #1eb154;
     --button-grey: #12151b;
+
+    --fill-darkest: rgb(23, 24, 30);
+    --fill-dark: rgb(31, 33, 41);
+    --fill-light: rgb(39, 41, 52);
+
+    --text-light: rgb(242, 244, 251);
+    --text-dark: rgb(155, 157, 159);
+    --text-high: crimson;
 }
 
 *{
     font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
-.main_body{
-    background-color: violet;
+body{
+    background-color: var(--fill-dark) !important;
 }
 
 /* Navbar Section */
 
 #active-tab{
-    color: var(--text-green) !important;
+    color: var(--text-high) !important;
+}
+
+.navbar_section{
+    background: var(--fill-light);
+    position: fixed;
+    top: 0px;
+    width: 100vw;
 }
 
 .navbar_section .navbar-brand{
-    font-size: 22px;
+    font-size: 32px;
+    font-weight: 600;
+    padding: 0;
+}
+.navbar_section .navbar-brand img{
+    height: 43px;
+    width: 43px;
+    border-radius: 7px;
 }
 
-.navbar_section .navbar-brand span{
-    color: var(--text-green);
+.navbar_section .navbar-toggler{
+    font-size: 25px;
+    box-shadow: none !important;
 }
-
-.navbar_section .navbar-nav li{
-    margin: 0px 8px;
+.navbar_section .navbar-toggler .fa-times{
+    font-size: 29px;
+    display: none;
 }
 
 .navbar_section .navbar-nav li a{
     color: white !important;
-    font-size: 15px;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 2px 0px 0px 6px;
 }
 .navbar_section .navbar-nav li a::after{
     content: "";
     width: 0%;
     height: 2px;
-    background: var(--text-green);
+    background: var(--text-high);
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -54,4 +78,25 @@
     width: 100%;
 }
 
+
 /* Hero Section */
+
+.hero_section{
+    margin-top: 64px;
+    height: 200vh;
+}
+
+
+
+/* ============ Media Queries Starts From This Part Now ============ */
+@media screen and (min-width: 0px) and (max-width: 425px) {
+    .navbar_section .navbar-nav{
+        margin-top: 10px;
+    }
+    .navbar_section .navbar-nav a{
+        text-align: center;
+    }
+    .navbar_section .navbar-nav li a::after{
+        height: unset;
+    }
+}
