added login system

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,10 +58,7 @@
                         <a class="nav-link" href="/downloads">Downloads</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Dummy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Dummy</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                 </ul>
             </div>
